syntax = "proto2";
package com.samsung.sra.protocol;
option java_package = "com.samsung.sra.protocol";

// Schema: every aggregate object must be one possibility in the (tagged) union
//         type ProtoOperator. When defining a new operator, you will need to
//         either reuse an existing entry in ProtoOperator for it, or add a new
//         entry.

message ProtoCMS {
    required int64 size = 1;
    //repeated int64 hashA = 2;  // long[depth]
    message Row {
        repeated int64 cell = 1; // long[width]
    }
    repeated Row row = 3; // row[depth] == long[depth][width]
}

// ProtoOperator = union { long, ProtoBloomFilter, ProtoCMS, ... }
message ProtoOperator {
    oneof operator {
        int64 long = 1; // e.g. sum, count
        bytes bytearray = 2;
        ProtoCMS cms = 3;
    }
}

// Primary key = (streamID, ts). ts is also referred to as "swid" (summary window ID) in parts of the code
message ProtoSummaryWindow {
    required int64 ts = 1; // start timestamp
    required int64 te = 2; // end timestamp
    required int64 cs = 3; // start count
    required int64 ce = 4; // end count
    repeated ProtoOperator operator = 5;
}

// Primary key = (streamID, ts). ts is also referred to as "lwid" (landmark window ID) in parts of the code
message ProtoLandmarkWindow {
    required int64 ts = 1; // start timestamp
    required int64 te = 2; // end timestamp
    repeated int64 timestamp = 3;
    repeated int64 value = 4; // TODO: arbitrary value types
}
