syntax = "proto2";
package com.samsung.sra.protocol;
option java_package = "com.samsung.sra.protocol";

// Schema: one message type per operator; include a comment to indicate operator name
// bucket message includes all nested messages

// by itself just a bitset; used by BloomFilters for now, but potentially others
message ProtoBitset {
    repeated bytes bitsetbytes = 1;
}

message ProtoSimpleCount {
    required int64 count = 1;
}

message ProtoSimpleSum {
    required int64 sum = 1;
}

message ProtoSimpleBloomFilter {
    required int32 filtersize = 1;
    required int32 numhashes = 2;
    required ProtoBitset bitset = 3;
}

// the superset; this is the whole bucket
message ProtoBucket {
    required int64 thisBucketid = 1;
    optional int64 prevBucketID = 2;
    optional int64 nextBucketID = 3;
    optional int64 tStart = 4;
    optional int64 tEnd = 5;
    optional int64 cStart = 6;
    optional int64 cEnd = 7;
    optional ProtoSimpleCount pcount = 8;
    optional ProtoSimpleSum psum = 9;
    optional ProtoSimpleBloomFilter pbloom = 10;

}
